# FfmpegTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/qiku/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/com/qiku/ffmpegtest/: MainActivity.java  VideoUtils.java
app/src/test/java/com/qiku/ffmpegtest/: ExampleUnitTest.java
